--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -493,17 +494,17 @@
                     <h2 class="text-xl font-bold text-primary-color mb-4">Current Academic Standing <span class="text-sm font-normal text-secondary-color">(Optional)</span></h2>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-4 items-end"> 
                     <div>
-                        <label for="current-cgpa" class="block text-sm font-medium text-tertiary-color mb-2">Current CGPA</label>
-                        <input type="number" id="current-cgpa" step="0.01" min="0.00" max="4.00" class="w-full form-input" placeholder="e.g., 3.50">
+                        <label for="current-cgpa" class="block text-sm font-medium text-tertiary-color mb-2">CGPA</label>
+                        <input type="number" id="current-cgpa" step="0.01" min="0.00" max="4.00" class="w-full form-input" placeholder="<=4">
                         <p id="cgpa-error" class="text-red-500 text-sm error-placeholder"></p>
                     </div>
                     <div>
-                        <label for="completed-credits" class="block text-sm font-medium text-tertiary-color mb-2">Total Credits Attempted<br>(Incl. F grades)</label>
-                        <input type="number" id="completed-credits" step="0.5" min="0" class="w-full form-input" placeholder="e.g., 90">
+                        <label for="completed-credits" class="block text-sm font-medium text-tertiary-color mb-2">Total Att. Credits</label>
+                        <input type="number" id="completed-credits" step="0.5" min="0" class="w-full form-input" placeholder="Incl. F grades">
                         <p id="attempted-credits-error" class="error-placeholder text-red-500 text-sm"></p>
                     </div>
                     <div>
-                        <label for="completed-earned-credits" class="block text-sm font-medium text-tertiary-color mb-2">Total Credits Earned<br>(Before this Tri.)</label>
+                        <label for="completed-earned-credits" class="block text-sm font-medium text-tertiary-color mb-2">Completed Credits</label>
                         <input type="number" id="completed-earned-credits" step="0.5" min="0" class="w-full form-input" placeholder="e.g., 85">
                         <p id="earned-credits-error" class="error-placeholder text-red-500 text-sm"></p>
                     </div>
@@ -721,20 +722,20 @@
                     <h2 class="text-xl font-bold text-primary-color mb-4">Course Grade Calculator</h2>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-4 items-end">
                         <div>
-                            <label for="assignment-marks" class="block text-sm font-medium text-tertiary-color mb-2">Assignment (out of 5)</label>
-                            <input type="number" id="assignment-marks" step="0.1" min="0" max="5" class="w-full form-input" placeholder="e.g., 4.5">
+                            <label for="assignment-marks" class="block text-sm font-medium text-tertiary-color mb-2">Assignment</label>
+                            <input type="number" id="assignment-marks" step="0.1" min="0" max="5" class="w-full form-input" placeholder="out of 5">
                         </div>
                         <div>
-                            <label for="attendance-marks" class="block text-sm font-medium text-tertiary-color mb-2">Attendance (out of 5)</label>
-                            <input type="number" id="attendance-marks" step="0.1" min="0" max="5" class="w-full form-input" placeholder="e.g., 5">
+                            <label for="attendance-marks" class="block text-sm font-medium text-tertiary-color mb-2">Attendance</label>
+                            <input type="number" id="attendance-marks" step="0.1" min="0" max="5" class="w-full form-input" placeholder="out of 5">
                         </div>
                         <div>
-                            <label for="midterm-marks" class="block text-sm font-medium text-tertiary-color mb-2">Midterm (out of 30)</label>
-                            <input type="number" id="midterm-marks" step="0.1" min="0" max="30" class="w-full form-input" placeholder="e.g., 25">
+                            <label for="midterm-marks" class="block text-sm font-medium text-tertiary-color mb-2">Midterm</label>
+                            <input type="number" id="midterm-marks" step="0.1" min="0" max="30" class="w-full form-input" placeholder="out of 30">
                         </div>
                         <div>
-                            <label for="final-marks" class="block text-sm font-medium text-tertiary-color mb-2">Final (out of 40)</label>
-                            <input type="number" id="final-marks" step="0.1" min="0" max="40" class="w-full form-input" placeholder="e.g., 32">
+                            <label for="final-marks" class="block text-sm font-medium text-tertiary-color mb-2">Final</label>
+                            <input type="number" id="final-marks" step="0.1" min="0" max="40" class="w-full form-input" placeholder="out of 40">
                         </div>
                     </div>
                 </div>
@@ -768,6 +769,7 @@
                         <div>
                             <label for="trimester-completed-input" class="block text-sm font-medium text-tertiary-color mb-2">Trimester Completed</label>
                             <input type="number" id="trimester-completed-input" min="0" class="w-full form-input" placeholder="e.g., 5">
+                            <p id="trimester-completed-error" class="text-red-500 text-sm error-placeholder"></p>
                         </div>
                     </div>
                     <button id="calculate-credit-btn" class="w-full btn btn-main-calc mt-4"><i data-lucide="calculator" class="w-6 h-6"></i>Calculate</button>
@@ -1028,8 +1030,8 @@
                 const ctInputContainer = document.createElement('div');
                 ctInputContainer.className = 'flex items-center gap-2';
                 ctInputContainer.innerHTML = `
-                    <label for="ct-score-${newIndex}" class="block text-sm font-medium text-tertiary-color">CT ${newIndex + 1} (20)</label>
-                    <input type="number" id="ct-score-${newIndex}" step="0.1" min="0" max="20" class="w-full form-input ct-score-input" placeholder="e.g., 18">
+                    <label for="ct-score-${newIndex}" class="block text-sm font-medium text-tertiary-color">CT(${newIndex + 1})</label>
+                    <input type="number" id="ct-score-${newIndex}" step="0.1" min="0" max="20" class="w-full form-input ct-score-input" placeholder="out of 20">
                      <button class="remove-ct-btn text-red-400 hover:text-red-600 p-2 rounded-full transition-colors"><i data-lucide="trash-2" class="w-5 h-5"></i></button>
                 `;
                 ctScoresContainer.appendChild(ctInputContainer);
