--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -493,17 +494,17 @@
                     <h2 class="text-xl font-bold text-primary-color mb-4">Current Academic Standing <span class="text-sm font-normal text-secondary-color">(Optional)</span></h2>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-4 items-end"> 
                     <div>
-                        <label for="current-cgpa" class="block text-sm font-medium text-tertiary-color mb-2">Current CGPA</label>
-                        <input type="number" id="current-cgpa" step="0.01" min="0.00" max="4.00" class="w-full form-input" placeholder="e.g., 3.50">
+                        <label for="current-cgpa" class="block text-sm font-medium text-tertiary-color mb-2">CGPA</label>
+                        <input type="number" id="current-cgpa" step="0.01" min="0.00" max="4.00" class="w-full form-input" placeholder="<=4">
                         <p id="cgpa-error" class="text-red-500 text-sm error-placeholder"></p>
                     </div>
                     <div>
-                        <label for="completed-credits" class="block text-sm font-medium text-tertiary-color mb-2">Total Credits Attempted<br>(Incl. F grades)</label>
-                        <input type="number" id="completed-credits" step="0.5" min="0" class="w-full form-input" placeholder="e.g., 90">
+                        <label for="completed-credits" class="block text-sm font-medium text-tertiary-color mb-2">Total Att. Credits</label>
+                        <input type="number" id="completed-credits" step="0.5" min="0" class="w-full form-input" placeholder="Incl. F grades">
                         <p id="attempted-credits-error" class="error-placeholder text-red-500 text-sm"></p>
                     </div>
                     <div>
-                        <label for="completed-earned-credits" class="block text-sm font-medium text-tertiary-color mb-2">Total Credits Earned<br>(Before this Tri.)</label>
+                        <label for="completed-earned-credits" class="block text-sm font-medium text-tertiary-color mb-2">Completed Credits</label>
                         <input type="number" id="completed-earned-credits" step="0.5" min="0" class="w-full form-input" placeholder="e.g., 85">
                         <p id="earned-credits-error" class="error-placeholder text-red-500 text-sm"></p>
                     </div>
@@ -721,20 +722,20 @@
                     <h2 class="text-xl font-bold text-primary-color mb-4">Course Grade Calculator</h2>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-4 items-end">
                         <div>
-                            <label for="assignment-marks" class="block text-sm font-medium text-tertiary-color mb-2">Assignment (out of 5)</label>
-                            <input type="number" id="assignment-marks" step="0.1" min="0" max="5" class="w-full form-input" placeholder="e.g., 4.5">
+                            <label for="assignment-marks" class="block text-sm font-medium text-tertiary-color mb-2">Assignment</label>
+                            <input type="number" id="assignment-marks" step="0.1" min="0" max="5" class="w-full form-input" placeholder="out of 5">
                         </div>
                         <div>
-                            <label for="attendance-marks" class="block text-sm font-medium text-tertiary-color mb-2">Attendance (out of 5)</label>
-                            <input type="number" id="attendance-marks" step="0.1" min="0" max="5" class="w-full form-input" placeholder="e.g., 5">
+                            <label for="attendance-marks" class="block text-sm font-medium text-tertiary-color mb-2">Attendance</label>
+                            <input type="number" id="attendance-marks" step="0.1" min="0" max="5" class="w-full form-input" placeholder="out of 5">
                         </div>
                         <div>
-                            <label for="midterm-marks" class="block text-sm font-medium text-tertiary-color mb-2">Midterm (out of 30)</label>
-                            <input type="number" id="midterm-marks" step="0.1" min="0" max="30" class="w-full form-input" placeholder="e.g., 25">
+                            <label for="midterm-marks" class="block text-sm font-medium text-tertiary-color mb-2">Midterm</label>
+                            <input type="number" id="midterm-marks" step="0.1" min="0" max="30" class="w-full form-input" placeholder="out of 30">
                         </div>
                         <div>
-                            <label for="final-marks" class="block text-sm font-medium text-tertiary-color mb-2">Final (out of 40)</label>
-                            <input type="number" id="final-marks" step="0.1" min="0" max="40" class="w-full form-input" placeholder="e.g., 32">
+                            <label for="final-marks" class="block text-sm font-medium text-tertiary-color mb-2">Final</label>
+                            <input type="number" id="final-marks" step="0.1" min="0" max="40" class="w-full form-input" placeholder="out of 40">
                         </div>
                     </div>
                 </div>
@@ -763,10 +764,12 @@
                         <div>
                             <label for="completed-credit-input" class="block text-sm font-medium text-tertiary-color mb-2">Completed Credits</label>
                             <input type="number" id="completed-credit-input" min="0" class="w-full form-input" placeholder="e.g., 50">
+                            <p id="completed-credit-error" class="text-red-500 text-sm error-placeholder"></p>
                         </div>
                         <div>
                             <label for="trimester-completed-input" class="block text-sm font-medium text-tertiary-color mb-2">Trimester Completed</label>
                             <input type="number" id="trimester-completed-input" min="0" class="w-full form-input" placeholder="e.g., 5">
+                            <p id="trimester-completed-error" class="text-red-500 text-sm error-placeholder"></p>
                         </div>
                     </div>
                     <button id="calculate-credit-btn" class="w-full btn btn-main-calc mt-4"><i data-lucide="calculator" class="w-6 h-6"></i>Calculate</button>
@@ -1027,8 +1030,8 @@
                 const ctInputContainer = document.createElement('div');
                 ctInputContainer.className = 'flex items-center gap-2';
                 ctInputContainer.innerHTML = `
-                    <label for="ct-score-${newIndex}" class="block text-sm font-medium text-tertiary-color">CT ${newIndex + 1} (20)</label>
-                    <input type="number" id="ct-score-${newIndex}" step="0.1" min="0" max="20" class="w-full form-input ct-score-input" placeholder="e.g., 18">
+                    <label for="ct-score-${newIndex}" class="block text-sm font-medium text-tertiary-color">CT(${newIndex + 1})</label>
+                    <input type="number" id="ct-score-${newIndex}" step="0.1" min="0" max="20" class="w-full form-input ct-score-input" placeholder="out of 20">
                      <button class="remove-ct-btn text-red-400 hover:text-red-600 p-2 rounded-full transition-colors"><i data-lucide="trash-2" class="w-5 h-5"></i></button>
                 `;
                 ctScoresContainer.appendChild(ctInputContainer);
@@ -1347,7 +1350,54 @@
                 calcErrorEl.classList.add('hidden'); creditsErrorEl.classList.add('hidden');
             };
 
+            const validateAcademicStanding = () => {
+                const cgpa = parseFloat(currentCgpaInput.value);
+                const attempted = parseFloat(completedCreditsInput.value);
+                const earned = parseFloat(completedEarnedCreditsInput.value);
+
+                let isEarnedInvalid = false;
+                if (!isNaN(earned) && !isNaN(attempted) && earned > attempted) {
+                    isEarnedInvalid = true;
+                }
+
+                let isCgpaInvalid = false;
+                if (!isNaN(cgpa) && !isNaN(attempted) && !isNaN(earned)) {
+                    if ((cgpa * attempted) > (earned * 4.0)) {
+                        isCgpaInvalid = true;
+                    }
+                }
+
+                if (isEarnedInvalid) {
+                    earnedCreditsErrorEl.textContent = "Aeh! 🙂";
+                    earnedCreditsErrorEl.classList.add('visible');
+                } else {
+                    earnedCreditsErrorEl.textContent = "";
+                    earnedCreditsErrorEl.classList.remove('visible');
+                }
+
+                if (isCgpaInvalid) {
+                    cgpaErrorEl.textContent = "Aeh! 🙂";
+                    cgpaErrorEl.classList.add('visible');
+                } else {
+                    cgpaErrorEl.textContent = "";
+                    cgpaErrorEl.classList.remove('visible');
+                }
+
+                const isInvalid = isEarnedInvalid || isCgpaInvalid;
+
+                calculateBtn.disabled = isInvalid;
+                if (isInvalid) {
+                    calculateBtn.classList.add('opacity-50', 'cursor-not-allowed');
+                } else {
+                    calculateBtn.classList.remove('opacity-50', 'cursor-not-allowed');
+                }
+                return !isInvalid;
+            };
+
             const handleCalculation = () => {
+                if (!validateAcademicStanding()) {
+                    return;
+                }
                 hideResults();
                 let hasError = false;
                 const currentCgpaVal = currentCgpaInput.value.trim();
@@ -1617,7 +1667,12 @@
             if (themeToggle) {
                 themeToggle.addEventListener('change', () => updateTheme(themeToggle.checked));
             }
-            [currentCgpaInput, completedCreditsInput, completedEarnedCreditsInput].forEach(el => el.addEventListener('input', saveState));
+            [currentCgpaInput, completedCreditsInput, completedEarnedCreditsInput].forEach(el => {
+                el.addEventListener('input', () => {
+                    validateAcademicStanding();
+                    saveState();
+                });
+            });
             addCourseForm.addEventListener('submit', (e) => { e.preventDefault(); const c = courseCreditEl.value, g = courseGradeEl.value; if (!c || !g) { showNotification("Please select both credit and grade.", 'error'); return; } courses.push({ type: 'new', credit: parseFloat(c), grade: parseFloat(g) }); renderCourses(); hideResults(); saveState(); showNotification('Course added!'); courseCreditEl.value = ""; courseGradeEl.value = ""; });
             addRetakeForm.addEventListener('submit', (e) => { e.preventDefault(); const c = retakeCreditEl.value, oG = retakeOldGradeEl.value, nG = retakeNewGradeEl.value; if (!c || !oG || !nG) { showNotification("Please select all retake fields.", 'error'); return; } const credit = parseFloat(c), oldGrade = parseFloat(oG), newGrade = parseFloat(nG); if (oldGrade >= newGrade) { showNotification("New grade must be higher.", 'error'); return; } const hasInitial = (parseFloat(completedCreditsInput.value) || 0) > 0 && currentCgpaInput.value.trim() !== '' && (parseFloat(completedEarnedCreditsInput.value) || 0) >= 0 && completedEarnedCreditsInput.value.trim() !== ''; showNotification(hasInitial ? 'Retake course added!' : "Retake added. Enter Full Current Standing for best results.", hasInitial ? 'success' : 'warning'); courses.push({ type: 'retake', credit, oldGrade, newGrade }); renderCourses(); hideResults(); saveState(); retakeCreditEl.value = ""; retakeOldGradeEl.value = ""; retakeNewGradeEl.value = ""; });
             courseListContainer.addEventListener('click', (e) => { const removeBtn = e.target.closest('.remove-btn'); if (removeBtn) { courses.splice(parseInt(removeBtn.dataset.index), 1); renderCourses(); hideResults(); saveState(); } });
@@ -1648,9 +1703,40 @@
 
             // --- Credit Calculator Logic --- //
             const calculateCreditBtn = document.getElementById('calculate-credit-btn');
+            const completedCreditInput = document.getElementById('completed-credit-input');
+            const trimesterCompletedInput = document.getElementById('trimester-completed-input');
+
+            const validateCreditTab = () => {
+                const completedCreditErrorEl = document.getElementById('completed-credit-error');
+                const completedCredits = parseFloat(completedCreditInput.value);
+                let isInvalid = false;
+                if (!isNaN(completedCredits) && completedCredits > 138) {
+                    isInvalid = true;
+                }
+
+                if (isInvalid) {
+                    completedCreditErrorEl.textContent = "Aeh! 🙂";
+                    completedCreditErrorEl.classList.add('visible');
+                } else {
+                    completedCreditErrorEl.textContent = "";
+                    completedCreditErrorEl.classList.remove('visible');
+                }
+
+                calculateCreditBtn.disabled = isInvalid;
+                if (isInvalid) {
+                    calculateCreditBtn.classList.add('opacity-50', 'cursor-not-allowed');
+                } else {
+                    calculateCreditBtn.classList.remove('opacity-50', 'cursor-not-allowed');
+                }
+                return !isInvalid;
+            };
+
+            completedCreditInput.addEventListener('input', validateCreditTab);
+
             calculateCreditBtn.addEventListener('click', () => {
-                const completedCreditInput = document.getElementById('completed-credit-input');
-                const trimesterCompletedInput = document.getElementById('trimester-completed-input');
+                if (!validateCreditTab()) {
+                    return;
+                }
                 const creditResultSection = document.getElementById('credit-result-section');
                 const creditResultMessage = document.getElementById('credit-result-message');
 
