--- a/index.html
+++ b/index.html
@@ -666,9 +666,9 @@
                         <label for="retake-credit" class="block text-sm font-medium text-tertiary-color mb-2">Credits</label>
                         <select id="retake-credit" class="w-full form-select">
                             <option value="" selected disabled>Select Credit</option>
-                            <option value="3">3</option>
-                            <option value="2">2</option>
-                            <option value="1">1</option>
+                            <option value="3">3 Credits</option>
+                            <option value="2">2 Credits</option>
+                            <option value="1">1 Credits</option>
                         </select>
                     </div>
                     <div>
@@ -1995,4 +1995,5 @@ addRetakeForm.addEventListener('submit', (e) => {
     </script>
 </body>
 </html>
+
 
