--- a/index.html
+++ b/index.html
@@ -1506,7 +1506,7 @@
                 }
 
                 if (isEarnedInvalid) {
-                    earnedCreditsErrorEl.textContent = "Comp. credits cannot be greater than att. credits";
+                    earnedCreditsErrorEl.textContent = "Aeh! 🙂";
                     earnedCreditsErrorEl.classList.add('visible');
                 } else {
                     earnedCreditsErrorEl.textContent = "";
@@ -1514,7 +1514,7 @@
                 }
 
                 if (isCgpaInvalid) {
-                    cgpaErrorEl.textContent = "CGPA is too high for the given credits";
+                    cgpaErrorEl.textContent = "Aeh! 🙂";
                     cgpaErrorEl.classList.add('visible');
                 } else {
                     cgpaErrorEl.textContent = "";
@@ -1995,6 +1995,7 @@ addRetakeForm.addEventListener('submit', (e) => {
     </script>
 </body>
 </html>
+
 
 
 
