--- a/index.html
+++ b/index.html
@@ -666,9 +666,9 @@
                         <label for="retake-credit" class="block text-sm font-medium text-tertiary-color mb-2">Credits</label>
                         <select id="retake-credit" class="w-full form-select">
                             <option value="" selected disabled>Select Credit</option>
-                            <option value="3">3</option>
-                            <option value="2">2</option>
-                            <option value="1">1</option>
+                            <option value="3">3 Credits</option>
+                            <option value="2">2 Credits</option>
+                            <option value="1">1 Credits</option>
                         </select>
                     </div>
                     <div>
@@ -701,7 +701,6 @@
                             <option value="1.67">C- (1.67)</option>
                             <option value="1.33">D+ (1.33)</option>
                             <option value="1.00">D (1.00)</option>
-                            <option value="0.00">F (0.00)</option>
                         </select>
                     </div>
                     <button type="submit" class="w-full btn btn-secondary"><i data-lucide="repeat" class="w-5 h-5"></i>Add Retake</button>
@@ -1996,3 +1995,4 @@ addRetakeForm.addEventListener('submit', (e) => {
     </script>
 </body>
 </html>
+
