--- a/index.html
+++ b/index.html
@@ -1067,7 +1067,7 @@
                     <div class="mt-6 w-full planner-good p-4 rounded-lg border">
                         <div class="mb-4 text-center">
                             <p class="text-tertiary-color">
-                                next trimester, If I get
+                                next Trimester, If I get
                                 <input type="number" id="future-gpa-good" class="w-14 form-input text-center mx-1 py-1 px-2" placeholder="GPA" step="0.01" min="0" max="4.00">
                                 GPA on
                                 <input type="number" id="future-credits-good" class="w-14 form-input text-center mx-1 py-1 px-2" placeholder="Cr." min="0" step="1.0">
@@ -1116,10 +1116,10 @@
                     <div class="mt-6 w-full planner-mid p-4 rounded-lg border">
                         <div class="mb-4 text-center">
                             <p class="text-tertiary-color">
-                                If I get
-                                <input type="number" id="future-gpa-mid" class="w-20 form-input text-center mx-1" placeholder="GPA" step="0.01" min="0" max="4.00">
+                                next Trimester, If I get
+                                <input type="number" id="future-gpa-mid" class="w-14 form-input text-center mx-1 py-1 px-2" placeholder="GPA" step="0.01" min="0" max="4.00">
                                 GPA on
-                                <input type="number" id="future-credits-mid" class="w-20 form-input text-center mx-1" placeholder="Credits" min="0" step="0.5">
+                                <input type="number" id="future-credits-mid" class="w-14 form-input text-center mx-1 py-1 px-2" placeholder="Cr." min="0" step="1.0">
                                 credits my CGPA will be:
                                 <span id="future-cgpa-mid" class="font-bold text-orange-600">__</span>
                             </p>
@@ -1165,10 +1165,10 @@
                     <div class="mt-6 w-full planner-low p-4 rounded-lg border">
                         <div class="mb-4 text-center">
                             <p class="text-tertiary-color">
-                                If I get
-                                <input type="number" id="future-gpa-low" class="w-20 form-input text-center mx-1" placeholder="GPA" step="0.01" min="0" max="4.00">
+                                next Trimester, If I get
+                                <input type="number" id="future-gpa-low" class="w-14 form-input text-center mx-1 py-1 px-2" placeholder="GPA" step="0.01" min="0" max="4.00">
                                 GPA on
-                                <input type="number" id="future-credits-low" class="w-20 form-input text-center mx-1" placeholder="Credits" min="0" step="0.5">
+                                <input type="number" id="future-credits-low" class="w-14 form-input text-center mx-1 py-1 px-2" placeholder="Cr." min="0" step="1.0">
                                 credits my CGPA will be:
                                 <span id="future-cgpa-low" class="font-bold text-red-600">__</span>
                             </p>
